# image-editor

./: CMakeLists.txt  README.md  imageprocessingservice.cpp  imageprocessingservice.h  main.cpp  mainwindow.cpp  mainwindow.h
